[gd_scene load_steps=8 format=3 uid="uid://eodgm14e1fya"]

[ext_resource type="Script" path="res://Board/ChestPopup/ChestPopup.gd" id="1_tf4w1"]
[ext_resource type="FontFile" uid="uid://dqdbst8avnfuo" path="res://Assets/fonts/Lady Radical.ttf" id="2_skkm3"]
[ext_resource type="PackedScene" uid="uid://d3fpf8gbjxsbx" path="res://Resources/CoinValue.tscn" id="4_jcs48"]
[ext_resource type="Script" path="res://Board/ChestPopup/StringTableLabel.gd" id="5_rfrj4"]
[ext_resource type="AnimationLibrary" uid="uid://b0bketi7rqh3c" path="res://Resources/DCPopupAnimationLibrary.tres" id="5_sbuu8"]

[sub_resource type="LabelSettings" id="LabelSettings_3ik3a"]
font = ExtResource("2_skkm3")

[sub_resource type="LabelSettings" id="LabelSettings_o7rdj"]
font_size = 8
font_color = Color(0.764706, 0.764706, 0.764706, 1)

[node name="ChestPopup" type="CanvasLayer"]
layer = 20
visible = false
offset = Vector2(640, 360)
scale = Vector2(4, 4)
transform = Transform2D(4, 0, 0, 4, 640, 360)
script = ExtResource("1_tf4w1")

[node name="MouseBlocker" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = -0.125
anchor_top = -0.125
anchor_right = 0.125
anchor_bottom = 0.125
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="BackgroundAnchor" type="Node2D" parent="."]
unique_name_in_owner = true
scale = Vector2(1, 1e-05)

[node name="MarginContainer" type="MarginContainer" parent="BackgroundAnchor"]
custom_minimum_size = Vector2(320, 80)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -40.0
offset_right = 160.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="BackgroundAnchor/MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="ContentsAnchor" type="Node2D" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)

[node name="MarginContainer" type="MarginContainer" parent="ContentsAnchor"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -40.0
offset_right = 160.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 7

[node name="VBoxContainer" type="VBoxContainer" parent="ContentsAnchor/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="ContentsAnchor/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
text = "treasure found!"
label_settings = SubResource("LabelSettings_3ik3a")

[node name="Control" type="Control" parent="ContentsAnchor/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="RewardsContainer" type="HBoxContainer" parent="ContentsAnchor/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4

[node name="CoinValue" parent="ContentsAnchor/MarginContainer/VBoxContainer" instance=ExtResource("4_jcs48")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
red_if_too_expensive = false

[node name="Control2" type="Control" parent="ContentsAnchor/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 7)
layout_mode = 2

[node name="StringTableLabel" type="Label" parent="ContentsAnchor/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
text = "easy mode activated"
label_settings = SubResource("LabelSettings_o7rdj")
script = ExtResource("5_rfrj4")
table_name = &"Chest-Item"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": ExtResource("5_sbuu8")
}
